css/style.css
/**
* APP MAIN STRUCTURE
*/

body {
    min-height:800px;
}

header, main {
    width: 1000px;
    margin: 20px auto;
}

.site_title {
    height: 70px;
    text-align: center;
}

section h2 {
    line-height: 10%;
    border-bottom: 2px solid #000;
}

section h2 span {
    background-color: #fff;
    padding: 0 10px 0 0;
}

.section_heading {
    position: relative;
    width: 100%;
    display: table;
}

/**
* END OF APP MAIN STRUCTURE
*/



/**
* ROTATING TRIANGLE
*/

.fa.fa-caret-down {
    position: absolute;
    top: -1px;
    right: 0;
    transition-duration: 1s;
    outline: 0;
}

.rotate {
    transition: all 2s linear;
}

.rotate.left{
    transform-origin: 75% 47%;
    transform: rotate(90deg);
}

span .fa.fa-caret-down {
    background-color: #fff;
    padding: 0 0 0 10px;
    cursor:pointer;
}

/**
* END OF ROTATING TRIANGLE
*/


/**
* SECTION CONTENT
*/

.section_content {
    position: relative;
    width: 100%;
    height: 200px;
    display: table;
    background-color: yellow;
}

.section_content.closed {
    height: 0;
    transition: height 0.7s linear;
}

.section_content.open {
    height: 200px;
    transition: height 0.8s linear;
}

/**
* END OF SECTION CONTENT
*/


#search_box_wrapper {
    position: relative;
}

#search_box_wrapper:before {
    font-family: 'FontAwesome';
    font-size: 25px;
    position: absolute;
    top: 10px;
    left: 10px;
    content: "\f002";
}


input[type=text] {
    width: 130px;
    border: 2px solid black;
    border-radius: 4px;
    padding: 12px 20px 12px 40px;
}

